--- a/_posts/2017-05-31-project-1.markdown
+++ b/_posts/2017-05-31-project-1.markdown
@@ -1,14 +1,14 @@
 ---
-title: Treehouse
-subtitle: Website Design
+title: Afterglow Beauty
+subtitle: Website Design & Build
 layout: default
-modal-id: 4
-date: 2014-07-15
-img: treehouse.png
-thumbnail: treehouse-thumbnail.png
+modal-id: 1
+date: 2017-05-31
+img: afterglow.png
+thumbnail: afterglow-thumbnail.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
+project-date: May 2017
+client: Afterglow Beauty
 category: Web Development
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
