--- a/_posts/2017-11-01-project-2.markdown
+++ b/_posts/2017-11-01-project-2.markdown
@@ -3,12 +3,13 @@ title: Blaker's Entertainment
 subtitle: Design & Print
 layout: default
 modal-id: 2
-date: 2014-07-17
+date: 2017-11-01
 img: blakers.png
 thumbnail: blakers-thumbnail.png
 alt: image-alt
-project-date: April 2014
+project-date: November 2017
 client: Blaker's Entertainment
+category: Design & Print
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
