--- a/_posts/2017-12-03-project-4.markdown
+++ b/_posts/2017-12-03-project-4.markdown
@@ -1,15 +1,15 @@
 ---
-title: Afterglow Beauty
-subtitle: Website Design & Build
+title: Espresso Solutions
+subtitle: Social Media
 layout: default
-modal-id: 1
-date: 2017-10-18
-img: afterglow.png
-thumbnail: afterglow-thumbnail.png
+modal-id: 4
+date: 2017-12-03
+img: espresso-solutions.png
+thumbnail: espresso-solutions-thumbnail.png
 alt: image-alt
-project-date: October 2017
-client: Afterglow Beauty
-category: Web Development
+project-date: December 2017
+client: Espresso Solutions
+category: Social Media
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
